--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     </span>
     <div class="endtext">
       <span class="close" title="Close"><i class="fa fa-times"></i></span>  
-      <h1>TE AMO AMOR MIO</h1>
+      <h1>TE QUIERO MUCHO MI CHARITO</h1>
       <h2>~</h2>
-      <h3>De tú Novio Jonathan</h3>
+      <h3>De  Jonathan</h3>
     </div>
   </div>
 </div>
